solrallinone.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: solr-deployment-all
  labels:
    app: solrall
spec:
  replicas: 3
  selector:
    matchLabels:
      app: solrall
  template:
    metadata:
      labels:
        app: solrall
    spec:
      containers:
      - name: solrall
        image: arunvel1988/alpine_solr
        ports:
        - containerPort: 8983

---
kind: Service
apiVersion: v1
metadata:
  name: solrallservice
spec:
  # Expose the service on a static port on each node
  # so that we can access the service from outside the cluster
  type: NodePort

  # When the node receives a request on the static port (30163)
  # "select pods with the label 'app' set to 'echo-hostname'"
  # and forward the request to one of them
  selector:
    app: solrall

  ports:
    # Three types of ports for a service
    # nodePort - a static port assigned on each the node
    # port - port exposed internally in the cluster
    # targetPort - the container port to send requests to
    - nodePort: 30007
      port: 8983
