solr_all_stateful_set.yaml
kind: Service
apiVersion: v1
metadata:
  name: solrallservice
spec:
  # Expose the service on a static port on each node
  # so that we can access the service from outside the cluster
  type: NodePort

  # When the node receives a request on the static port (30163)
  # "select pods with the label 'app' set to 'echo-hostname'"
  # and forward the request to one of them
  selector:
    app: solrall

  ports:
    # Three types of ports for a service
    # nodePort - a static port assigned on each the node
    # port - port exposed internally in the cluster
    # targetPort - the container port to send requests to
    - nodePort: 30007
      port: 8983


---



apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: solr-deployment-all
  labels:
    app: solrall
spec:
  serviceName: "solrallservice"
  replicas: 2
  selector:
    matchLabels:
      app: solrall
  template:
    metadata:
      labels:
        app: solrall
    spec:
      containers:
      - name: solrall
        image: arunvel1988/alpine_solr
        ports:
        - containerPort: 8983
        volumeMounts:
        - name: www
          mountPath: /usr/share/nginx/html
  
  volumeClaimTemplates:
  - metadata:
      name: www
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi   




---

kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: solr-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: solr.info
    http:
      paths:
      - path: /
        backend:
          serviceName: solrallservice
          servicePort: 8983
