solr_ingress.yaml
apiVersion: networking.k8s.io/v1beta1 
kind: Ingress
metadata:
  name: solr-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: solr.info
    http:
      paths:
      - path: /
        backend:
          serviceName: solrallservice
          servicePort: 8983
